--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -5,6 +5,21 @@
     text-align: center;
 }
 
+//定位上下左右居中
+@mixin ctp($width, $height) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -$height/2;
+    margin-left: -$width/2;
+}
+
+//宽高
+@mixin wh($width, $height) {
+    width: $width;
+    height: $height;
+}
+
 //常用蓝色
 $blue: #205081;
 .clear:after {
