--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -40,7 +40,10 @@ q:before, q:after {
 a:hover, a:active {
     outline: none;
 }
-
+a{
+  text-decoration: none;
+  color: #205081;
+}
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
