--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -116,3 +116,7 @@ $blue: #205081;
     justify-content: space-around;
     min-width: 860px;
 }
+
+.el-radio-button__orig-radio:checked+.el-radio-button__inner {
+    box-shadow: -1px 0 0 0 #ffffff;
+}
